force-app/main/default/objects/MDMCustomerOrderType__c/MDMCustomerOrderType__c.object-meta.xml
<CustomObject>
    <label>MDMCustomerOrderType</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>MDMCustomerOrderType 이름</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>