force-app/main/default/objects/MDMCustomerOrderType__c/fields/CLOSEGB__c.field-meta.xml
<CustomField>
    <fullName>CLOSEGB__c</fullName>
    <label>CLOSEGB</label>
    <length>10</length>
    <type>Text</type>
</CustomField>