force-app/main/default/objects/MDMCustomerOrderType__c/fields/CUHR1__c.field-meta.xml
<CustomField>
    <fullName>CUHR1__c</fullName>
    <label>CUHR1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>