force-app/main/default/objects/MDMCustomerOrderType__c/fields/LOGISCENTER__c.field-meta.xml
<CustomField>
    <fullName>LOGISCENTER__c</fullName>
    <label>LOGISCENTER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>